--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,7 @@ jobs:
         ssh-keyscan -t rsa ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
     - name: connect and pull
       run: ssh -o HostKeyAlgorithms=+ssh-rsa -o PubkeyAcceptedKeyTypes=+ssh-rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && git checkout ${{ secrets.MAIN_BRANCH }} && git pull && exit"
+    - name: restart supervisor daemon
+      run: ssh -o HostKeyAlgorithms=+ssh-rsa -o PubkeyAcceptedKeyTypes=+ssh-rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "echo ${{ secrets.USER_PASSWORD }} | sudo -S supervisorctl restart tgbot"
     - name: cleanup
       run: rm -rf ~/.ssh
